<resources>
    <string name="app_name">IOD</string>
    <string name="login_succes">Login Behasil</string>
    <string name="login_gagal">Login Gagal</string>
    <string name="register_succes">Register Behasil</string>
    <string name="register_gagal">Register Gagal</string>
    <string name="login_message">Silahkan masuk menggunakan akun yang anda miliki untuk menggunakan IOD </string>
    <string name="register_message">Silahkan daftar untuk menggunakan IOD</string>
    <string name="landing_page">Selamat datang di IOD</string>
    <string name="sub_landing_page">Catat dan lihat hasil olahraga di IOD</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="lanjut">Lanjut</string>
    <string name="entry_pelatih">Masukkan nama pelatih :</string>
    <string name="welcome">Selamat datang di IOD</string>
    <string name="connect">Connect \n Polar</string>
    <string name="profil">Profil</string>
    <string name="tinggi_badan">Tinggi badan</string>
    <string name="berat_badan">Berat badan</string>
    <string name="hrmax">Heart rate max</string>

    <string name="intruksi1">Kenakan sensor denyut nadi anda.</string>
    <string name="intruksi2">Mulai mendeteksi denyut nadi istirahat (HRR) selama 1 menit.</string>
    <string name="intruksi3">Pastikan posisi tubuh anda dalam posisi rileks.</string>
    <string name="intruksi4">Hasil dari deteksi nadi istirahat akan menjadi batas minimum performa fisik anda, apabila denyut nadi berada setara atau dibawah denyut nadi istirahat maka akan terhitung sebagai aktifitas istirahat.</string>
    <string name="pilih_jenis_olahraga">Pilih jenis olahraga</string>
    <string name="pilih_pengguna">Pilih pengguna</string>
    <string name="pilih_nama_pelatih">Pilih nama pelatih</string>
    <string name="field_kosong">Field ada yang kosong!</string>
    <string name="pelatih">Pelatih</string>

    <string name="durasi_aktif">Durasi Aktif</string>
    <string name="durasi_istirahat">Durasi Istirahat</string>
    <string name="durasi_total">Durasi Total</string>
    <string name="dosis_latihan">Dosis Latihan</string>
    <string name="kualitas_latihan">Kualitas Latihan</string>
    <string name="jam_mulai">Jam Mulai</string>
    <string name="jam_selesai">Jam Selesai</string>
    <string name="hrr">Heart Rate Reserve</string>
    <string name="peak_hrp">Peak HRP</string>

</resources>
